BUILT_SOURCES = ratlang_bison.h
AM_YFLAGS = -d --report all
AM_LFLAGS =
bin_PROGRAMS = ratlang
ratlang_SOURCES = ratlang_bison.y ratlang_flex.l env.c env.h value.c value.h node.c node.h runtime.h
ratlang_LDADD = -lm -lreadline -lmp
TESTS = env-unit-test value-unit-test node-unit-test
check_PROGRAMS = env-unit-test value-unit-test node-unit-test
env_unit_test_SOURCES = ratlang_unit_test.h env.c env.h env_unit_test.c
env_unit_test_LDADD = -lm
value_unit_test_SOURCES = ratlang_unit_test.h value.c value.h value_unit_test.c
value_unit_test_LDADD = -lm -lmp
node_unit_test_SOURCES = ratlang_unit_test.h node.c node.h value.c env.c node_unit_test.c
node_unit_test_LDADD = -lm -lmp
